--- a/package.json
+++ b/package.json
@@ -43,7 +43,28 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "uuid": "^3.3.3"
-  },
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
+    "browser-sync": "^2.26.7",
+    "cross-env": "^5.2.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-evelyn": "^2.0.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-unicorn": "^16.1.1",
+    "forever": "^1.0.0",
+    "nodemon": "^1.19.2",
+    "npm-run-all": "^4.1.5",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8"
+  }
   "devDependencies": {
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
